feat: ffmpeg 설정 추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -61,6 +61,11 @@ bob-core:
   jpa:
     enabled: off
 
+## transcoder
+transcoder:
+  ffmpeg:
+    dir: ${ffmpeg_dir:file:///usr/bin/ffmpeg}
+
 ## logging
 logging:
   charset:
