--- a/build.gradle
+++ b/build.gradle
@@ -90,6 +90,10 @@ dependencies {
 
     // flyway
     implementation 'org.flywaydb:flyway-core:9.21.1'
+
+    // ffmpeg
+    implementation 'net.bramp.ffmpeg:ffmpeg:0.8.0'
+    implementation 'org.zeroturnaround:zt-exec:1.12'
 }
 
 dependencyManagement {
